<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.trixner</groupId>
    <artifactId>base</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <springfox.version>3.0.0</springfox.version>
        <spring-boot.version>3.0.0</spring-boot.version>
        <jaxb.version>2.4.0-b180830.0359</jaxb.version>
        <jackson-databind-nullable.version>0.1.0</jackson-databind-nullable.version>
        <jackson-datatype-jsr310.version>2.13.3</jackson-datatype-jsr310.version>
        <validation-api.version>3.0.2</validation-api.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <openapi-generator.version>6.2.1</openapi-generator.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <lombok.version>1.18.24</lombok.version>
        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
        <commons-text.version>1.10.0</commons-text.version>
        <freemarker.version>2.3.31</freemarker.version>
        <h2.version>2.1.214</h2.version>
        <mysql-connector-java.version>8.0.31</mysql-connector-java.version>
        <spring-security-test.version>6.0.0</spring-security-test.version>
        <jjwt.version>0.11.5</jjwt.version>
        <jackson-databind-nullable.version>0.1.0</jackson-databind-nullable.version>
        <jackson-datatype-jsr310.version>2.9.10</jackson-datatype-jsr310.version>
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <frontend-maven-plugin.version>1.10.0</frontend-maven-plugin.version>
        <frontend-maven-plugin.nodeVersion>v19.3.0</frontend-maven-plugin.nodeVersion>
        <frontend-maven-plugin.npmVersion>9.2.0</frontend-maven-plugin.npmVersion>
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
        <slf4j-api.version>2.0.5</slf4j-api.version>
        <greenmail.version>2.0.0-alpha-2</greenmail.version>
        <json-path.version>2.7.0</json-path.version>
        <versions-maven-plugin.version>2.13.0</versions-maven-plugin.version>
        <angular.version>14.0.5</angular.version>
        <jakarta.activation-api.version>2.1.0</jakarta.activation-api.version>
        <jakarta.mail-api.version>2.1.0</jakarta.mail-api.version>
        <spring-web.version>6.0.2</spring-web.version>
        <jackson-annotations.version>2.9.5</jackson-annotations.version>
        <swagger.version>2.2.6</swagger.version>
        <tomcat-embed-core.version>10.1.1</tomcat-embed-core.version>
        <junit-jupiter.version>5.9.0</junit-jupiter.version>
        <assertj-core.version>3.23.1</assertj-core.version>
        <mockito-core.version>4.8.1</mockito-core.version>
        <jakarta.transaction-api.version>2.0.1</jakarta.transaction-api.version>
    </properties>
    <modules>
        <module>api</module>
        <module>client</module>
        <module>server</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
        </plugins>
    </build>
</project>
